# CerebellumBot-main

./: .gitignore  README.md  docker-compose.yml  pr_description.md
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml  test_services.py
backend/app/: main.py
backend/app/api/routes/: auth.py  reports.py  requests.py  signals.py  strategies.py  trade.py  wallet.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  log.py  request.py  signal.py  strategy.py  user.py  vault.py  wallet.py
backend/app/services/: ai_service.py  redis_service.py  trade_service.py
backend/tests/: test_main.py
docs/: API.md  DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DemoForm.tsx  InvestorForm.tsx  SignalsList.tsx  WalletPanel.tsx
frontend/src/pages/: Dashboard.tsx  Invest.tsx  SignalsPage.tsx
frontend/src/services/: api.ts
infra/: nginx.conf
